WIP Build CSS. main in progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <div class="left-nav-bar">
+            <img src="img/main_icon.png" alt="Page icon">
+            <ul class="main-menu">
+                <li class="main-menu-item"><a href="#">Store</a></li>
+                <li class="main-menu-item"><a href="#">News</a></li>
+                <li class="main-menu-item"><a href="#">Media</a></li>
+                <li class="main-menu-item"><a href="#">Studios</a></li>
+            </ul>
+        </div>
+        <div class="right-nav-bar">
+            <img class="icon-image" src="img/cursor_glitch.png" alt="">
+            <img class="icon-image" src="img/alien.png" alt="">
+            <img class="icon-image" src="img/pixel_heart.png" alt="">
+        </div>
+    </nav>
+    <main>
+        <h1>Welcome to the Oasis</h1>
+        <p>Bla bla bla</p>
+        <button id="buy-now">Buy Now</button>
+        <button id="play">Play</button>
+    </main>
+    <footer>
+        <span>Available on:</span>
+        <div id="footer-logos">
+            <img class="platform-image" src="img/steam_logo.png" alt="Steam logo">
+            <img class="platform-image" src="img/ps_logo.png" alt="PS logo">
+            <img class="platform-image" src="img/nintendo_logo.png" alt="Nintendo logo">
+            <img class="platform-image" src="img/controller_logo.png" alt="Controller logo">
+        </div>
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
