Finish first iteration of css

--- a/index.html
+++ b/index.html
@@ -20,23 +20,37 @@
         </div>
         <div class="right-nav-bar">
             <img class="icon-image" src="img/cursor_glitch.png" alt="">
-            <img class="icon-image" src="img/alien.png" alt="">
-            <img class="icon-image" src="img/pixel_heart.png" alt="">
+            <img class="icon-image" id="alien-img" src="img/alien.png" alt="">
+            <img class="icon-image" src="img/heart.png" alt="">
         </div>
     </nav>
     <main>
         <h1>Welcome to the Oasis</h1>
-        <p>Bla bla bla</p>
-        <button id="buy-now">Buy Now</button>
-        <button id="play">Play</button>
+        <p>You don't need a destination
+            when you're running
+            on an omnidirectional treadmill
+            with quadraphonic,
+            pressure-sensitive underlay.
+            James Halliday saw the future.
+            And then he built it.
+            He gave us a place to go.
+        </p>
+        <p>
+            A place called
+            the OASIS.
+        </p> 
+        <div class="button-box">
+            <button id="buy-now">Buy Now</button>
+            <button id="play">Play</button>
+        </div> 
     </main>
     <footer>
         <span>Available on:</span>
-        <div id="footer-logos">
+        <div class="footer-logos">
             <img class="platform-image" src="img/steam_logo.png" alt="Steam logo">
             <img class="platform-image" src="img/ps_logo.png" alt="PS logo">
             <img class="platform-image" src="img/nintendo_logo.png" alt="Nintendo logo">
-            <img class="platform-image" src="img/controller_logo.png" alt="Controller logo">
+            <img class="platform-image" src="img/xbox_logo.png" alt="Controller logo">
         </div>
     </footer>
     <script src="./index.js"></script>
