WIP. Refactor and media querys

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="right-nav-bar">
             <img class="icon-image" src="img/cursor_glitch.png" alt="">
             <img class="icon-image" id="alien-img" src="img/alien.png" alt="">
-            <img class="icon-image" src="img/heart.png" alt="">
+            <img class="icon-image" src="img/pixel_heart.png" alt="">
         </div>
     </nav>
     <main>
-        <h1>Welcome to the Oasis</h1>
+        <h1>Welcome to the OASIS</h1>
         <p>You don't need a destination
             when you're running
             on an omnidirectional treadmill
